--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,7 @@
 APPLICATION_ID=jone.helper
 VERSION_CODE=16
 VERSION_NAME=3.1.1
+
+KEYSTORE_PASSWORD=sunjianan22
+KEYSTORE_KEY_ALIAS=jonesun
+KEY_PASSWORD=sunjianan22
