--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         jackOptions {
             enabled true
         }
+        vectorDrawables.useSupportLibrary = true
     }
 
     compileOptions {
@@ -21,11 +22,28 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    //打包签名
+    signingConfigs {
+        release {
+            try {
+                storeFile file('store.jks')
+                storePassword KEYSTORE_PASSWORD
+                keyAlias KEYSTORE_KEY_ALIAS
+                keyPassword KEY_PASSWORD
+            }
+            catch (ignored) {
+                throw new InvalidUserDataException("You should define KEYSTORE_PASSWORD and KEY_PASSWORD in gradle.properties.")
+            }
+        }
+    }
+
     buildTypes {
         release {
+            signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
         applicationVariants.all { variant ->
             variant.outputs.each { output ->
                 def outputFile = output.outputFile
@@ -63,5 +81,7 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
-    compile 'com.ashokvarma.android:bottom-navigation-bar:1.3.0'
+//    compile 'com.ashokvarma.android:bottom-navigation-bar:1.3.0'
+    compile "com.android.support:support-v4:$rootProject.supportLibraryVersion"
+    compile "com.android.support:support-vector-drawable:$rootProject.supportLibraryVersion"
 }
