--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.android.tools.build:gradle:2.2.3'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -21,15 +21,19 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
+
 // Define versions in a single place
 ext {
     // Sdk and tools
     minSdkVersion = 15
     targetSdkVersion = 25
     compileSdkVersion = 25
-    buildToolsVersion = '24.0.2'
+    buildToolsVersion = '25.0.0'
 
     // App dependencies
-    supportLibraryVersion = '25.0.0'
+    supportLibraryVersion = '25.0.1'
     junitVersion = '4.12'
 }
